--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "html-react-parser": "^4.2.2",
     "iframe-react": "^1.0.1",
     "next": "^13.5.4",
     "postcss": "8.4.29",
