--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite-react": "^0.6.0",
     "html-react-parser": "^4.2.2",
     "htmr": "^1.0.2",
+    "js-cookie": "^3.0.5",
     "next": "^13.5.4",
     "postcss": "^8.4.31",
     "react": "18.2.0",
