--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-iframe": "^1.8.5",
     "react-multi-carousel": "^2.8.4",
     "react-quill": "^2.0.0",
+    "request": "^2.79.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
